--- a/style.css
+++ b/style.css
@@ -18,3 +18,66 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#37184a",endColorstr="#501056",GradientType=1);
   }
 
+/* Fonts */
+@font-face {
+    font-family: "AvenirNextPro";
+    font-weight: 700;
+    font-style: normal;
+    src: url("https://www.startsummit.ch/hubfs/b2match/fonts/381646_0_0.eot");
+    src: url("https://www.startsummit.ch/hubfs/b2match/fonts/381646_0_0.eot?#iefix")
+        format("embedded-opentype"),
+      url("https://www.startsummit.ch/hubfs/b2match/fonts/381646_0_0.woff2")
+        format("woff2"),
+      url("https://www.startsummit.ch/hubfs/b2match/fonts/381646_0_0.woff")
+        format("woff"),
+      url("https://www.startsummit.ch/hubfs/b2match/fonts/381646_0_0.ttf")
+        format("truetype");
+  }
+  @font-face {
+    font-family: "AvenirNextPro";
+    font-weight: 800;
+    font-style: normal;
+    src: url("https://www.startsummit.ch/hubfs/b2match/fonts/381646_1_0.eot");
+    src: url("https://www.startsummit.ch/hubfs/b2match/fonts/381646_1_0.eot?#iefix")
+        format("embedded-opentype"),
+      url("https://www.startsummit.ch/hubfs/b2match/fonts/381646_1_0.woff2")
+        format("woff2"),
+      url("https://www.startsummit.ch/hubfs/b2match/fonts/381646_1_0.woff")
+        format("woff"),
+      url("https://www.startsummit.ch/hubfs/b2match/fonts/381646_1_0.ttf")
+        format("truetype");
+  }
+  @font-face {
+    font-family: "AvenirNextPro";
+    font-weight: 400;
+    font-style: normal;
+    src: url("https://www.startsummit.ch/hubfs/b2match/fonts/381646_2_0.eot");
+    src: url("https://www.startsummit.ch/hubfs/b2match/fonts/381646_2_0.eot?#iefix")
+        format("embedded-opentype"),
+      url("https://www.startsummit.ch/hubfs/b2match/fonts/381646_2_0.woff2")
+        format("woff2"),
+      url("https://www.startsummit.ch/hubfs/b2match/fonts/381646_2_0.woff")
+        format("woff"),
+      url("https://www.startsummit.ch/hubfs/b2match/fonts/381646_2_0.ttf")
+        format("truetype");
+  }
+  html,
+  body{
+    font-family: "AvenirNextPro", sans-serif !important;
+    background-color: #2E123F;
+  }
+  h1{
+  /* Avenir Next Heavy, all caps, 43 pt */
+  font-family: "AvenirNextPro", sans-serif;
+  font-size: 3.6rem;
+  font-weight: 800;
+  color: white;
+}
+p{
+    /* Avenir Next Heavy, all caps, 43 pt */
+    font-family: "AvenirNextPro", sans-serif;
+    font-size: 1.5rem;
+    font-weight: 250;
+    color: white;
+  }
+ 
